--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,6 +183,88 @@ body {
   padding-inline: 15px;
 }
 
+.section {
+  padding-block: var(--section-padding);
+}
+
+.bg-dark {
+  background-color: var(--rich-black-fogra-29-1);
+  color: var(--silver-metallic);
+}
+
+.has-bg-image {
+  background-repeat: no-repeat;
+  background-position: top left;
+}
+
+.has-after, .has-before {
+  position: relative;
+  z-index: 1;
+}
+
+.has-before::before, .has-after::after {
+  content: " ";
+  position: absolute;
+}
+
+.h1,
+.h2,
+.h3 {
+  font-family: var(--white);
+  line-height: 1.25;
+}
+
+.h1 {
+  color: var(--white);
+  font-size: var(--fs-1);
+  font-weight: var(--fw-900);
+}
+
+.h2,
+.h3 {
+  color: var(--rich-black-fogra-29-1);
+  font-weight: var(--fw-800);
+}
+
+.h2 {
+  font-size: var(--fs-2);
+}
+
+.h3 {
+  font-size: var(--fs-4);
+}
+
+.section-text {
+  font-size: var(--fs-6);
+}
+
+.btn {
+  max-width: max-content;
+  font-size: var(--fs-6);
+  text-transform: uppercase;
+  font-weight: var(--fw-500);
+  padding: 15px 35px;
+  border-radius: var(--radius-8);
+  transition: var(--transition-1);
+}
+
+.btn-primary {
+  background-color: var(--coquelicot);
+  color: var(--white);
+}
+
+.btn-primary:is(:hover, :focus) {
+  background-color: var(--white);
+  color: var(--coquelicot);
+  box-shadow: var(--shadow-2);
+}
+
+
+.btn-secondary {
+   
+}
+
+
 
 
 /*-----------------------------------*\
