--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -261,8 +261,112 @@ body {
 
 
 .btn-secondary {
-   
+   background-color: var(--white);
+   color: var(--coquelicot);
 }
+
+.btn-secondary:is(:hover, :focus) { background-color: var(--rich-black-fogra-29-1); }
+
+.w-100 { width: 100%; }
+
+.circle,
+.abs-img { position: absolute; }
+
+.circle {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -56%);
+  width: 100%;
+  z-index: -1;
+  animation: rotate360 15s linear infinite;
+}
+
+@keyframes rotate360 {
+  0% { transform: translate(-50%, -56%) rotate(0); }
+  100% { transform: translate(-50%, -56%) rotate(1turn); }
+}
+
+.circle-2 { animation-direction: reverse; }
+
+.hero-subtitle,
+.section-subtitle {
+  font-family: var(--ff-catamaran);
+  font-weight: var(--fw-700);
+  text-transform: uppercase;
+  max-width: max-content;
+}
+
+.section-subtitle {
+  background-color: var(--coquelicot);
+  color: var(--white);
+  padding: 8px 20px;
+  border-radius: var(--radius-8);
+}
+
+.section-title { margin-block: 18px 35px; }
+
+.btn-link {
+  --color: var(--white);
+
+  color: var(--color);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-500);
+  text-transform: uppercase;
+  max-width: max-content;
+  transition: var(--transition-1);
+}
+
+.btn-link::before {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--color);
+  transition: var(--transition-1);
+}
+
+.btn-link:is(:hover, :focus) { --color: var(--coquelicot); }
+
+.text-center { text-align: center; }
+
+.img-holder {
+  aspect-ratio: var(--width) / var(--height);
+  background-color: var(--light-gray);
+  overflow: hidden;
+}
+
+.img-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.has-scrollbar {
+  display: flex;
+  gap: 25px;
+  overflow-x: auto;
+  padding-block-end: 30px;
+  scroll-snap-type: inline mandatory;
+}
+
+.scrollbar-item {
+  min-width: 100%;
+  scroll-snap-type: start;
+}
+
+.has-scrollbar::-webkit-scrollbar { height: 10px; }
+
+.has-scrollbar::-webkit-scrollbar-track,  
+.has-scrollbar::-webkit-scrollbar-thumb { border-radius: 50px; }
+
+.has-scrollbar::-webkit-scrollbar-thumb:hover { background-color: var(--coquelicot); }
+
+.has-scrollbar::-webkit-scrollbar-button { width: calc(25% - 25px); }
+
+
+
+
+
 
 
 
@@ -381,6 +485,78 @@ body {
   #HERO
 \*-----------------------------------*/
 
+.hero {
+  color: var(--cadet-gray);
+  text-align: center;
+  padding-block-start: calc(var(--section-padding) + 80px);
+  padding-block-end: 0;
+  overflow: hidden;
+}
+
+.hero::after {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--coquelicot);
+  z-index: -1;
+}
+
+.hero-content {
+  margin-block-end: 90px;
+}
+
+.hero-subtitle {
+  background-color: var(--white_10);
+  color: var(--white);
+  margin-inline: auto;
+  padding: 5px;
+  padding-inline-end: 15px;
+  border-radius: var(--radius-8);
+}
+
+.hero-subtitle strong {
+  display: inline-block;
+  background-color: var(--coquelicot);
+  padding: 2px 15px;
+  margin-inline-end: 15px;
+  border-radius: var(--radius-5);
+}
+
+.hero-title { margin-block-end: 40px; }
+
+.hero .section-text { margin-block-end: 40px; }
+
+.hero .btn { margin-inline: auto; }
+
+.hero-banner { position: relative; }
+
+.abs-img-1 {
+  top: 20px;
+  right: -50px;
+  width: 190px;
+}
+
+.abs-img-2 {
+  bottom: -50px;
+  left: -40px;
+  width: 280px;
+}
+
+.hero .abs-img { animation: move 3s linear infinite alternate; }
+
+@keyframes move {
+  0% { transform: translate(0, 0); }
+  50% { transform: translate(-5px, 10px); }
+  100% { transform: translate(5px, 20px); }
+}
+
+.hero .abs-img-2 {
+  animation-direction: alternate-reverse;
+}
+
+
+
+
 
 
 
@@ -389,13 +565,122 @@ body {
   #ABOUT
 \*-----------------------------------*/
 
+.about { overflow: hidden;}
 
+.about-banner { margin-block-end: 50px; }
+
+.about-banner::after {
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  background-color: var(--coquelicot);
+  border-radius: var(--radius-10);
+  z-index: -2;
+}
+
+.about-banner .abs-img {
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  animation: moveUp 2.5s ease infinite;
+}
+
+@keyframes moveUp {
+  0%,
+  30%,
+  60%,
+  100% { transform: translateY(0); }
+
+  20% { transform: translateY(-30px); }
+
+  40% { transform: translateY(-15px); }
+}
+
+.about .section-text:not(:last-of-type) { margin-block-end: 15px; }
+
+.about .wrapper { margin-block-start: 30px;}
+
+.about-coach {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-block-end: 30px;
+}
+
+.about .coach-avatar {
+  overflow: hidden;
+  border-radius: 50%;
+}
+
+.about .coach-name {
+  font-weight: var(--fw-700);
+  margin-block-end: 5px;
+}
+
+.about .coach-title { font-size: var(--fs-6); }
+
+.about .btn-primary:is(:hover, :focus) {
+  background-color: var(--rich-black-fogra-29-1);
+  color: var(--white);
+  box-shadow: none;
+}
 
 
 
 /*-----------------------------------*\
   #VIDEO
 \*-----------------------------------*/
+
+
+.video {
+  padding-block: 0;
+  margin-block-end: -250px;
+}
+
+.video-card {
+  background-color: var(--light-gray);
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  border-radius: var(--radius-10);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.video-card::before {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: var(--rich-black-fogra-29-50);
+  z-index: -1;
+}
+
+.video-card .card-title {
+  color: var(--white);
+  font-size: var(--fs-3);
+}
+
+.play-btn {
+  background-color: var(--coquelicot);
+  color: var(--white);
+  width: max-content;
+  font-size: 30px;
+  padding: 25px;
+  border-radius: 50%;
+  margin-block: 25px 35px;
+  animation: pulse 2s ease infinite;
+}
+
+@keyframes pulse {
+  0% { box-shadow: 0 0 0 0 var(--coquelicot); }
+  100% { box-shadow: 0 0 0 40px transparent; }
+}
+
 
 
 
@@ -406,12 +691,125 @@ body {
 \*-----------------------------------*/
 
 
+.class { padding-block-start: calc(var(--section-padding) + 250px); }
+
+.class .section-subtitle { margin-inline: auto; }
+
+.class .section-title { color: var(--white); }
+
+.class-card {
+  background-color: var(--white);
+  border-radius: var(--radius-10);
+  height: 100%;
+  overflow: hidden;
+}
+
+.class-card .card-banner img { transition: var(--transition-2); }
+
+.class-card:is(:hover, :focus-within) .card-banner img {
+  transform: scale(1.1);
+
+}
+
+.class-card .card-content { padding: 24px; }
+
+.class-card .title-wrapper {
+  display: flex;
+  align-items: center;
+}
+
+.class-card .title-icon {
+  padding-inline-end: 20px;
+  margin-inline-end: 20px;
+  min-width: max-content;
+  border-inline-end: 1px solid var(--gainsboro);
+}
+
+.class-card .card-title { transition: var(--transition-1); }
+
+.class-card .card-title:is(:hover, :focus) { color: var(--coquelicot); }
+
+.class-card .card-text {
+  color: var(--sonic-silver);
+  font-size: var(--fs-6);
+  margin-block: 16px 12px;
+}
+
+.class-card .progress-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: var(--ff-catamaran);
+  color: var(--rich-black-fogra-29-1);
+  font-size: var(--fs-6);
+  font-weight: var(--fw-800);
+  margin-block-end: 8px;
+}
+
+.class-card .progress-bg {
+  background-color: var(--coquelicot_10);
+  border-radius: 50px;
+}
+
+.class-card .progress-bar {
+  background-color: var(--coquelicot);
+  height: 10px;
+  border-radius: inherit;
+}
+
+
 
 
 
 /*-----------------------------------*\
   #BLOG
 \*-----------------------------------*/
+
+.blog .section-subtitle { margin-inline: auto; }
+
+.blog-card {
+  background-color: var(--white);
+  border: 1px solid var(--light-gray);
+  border-radius: var(--radius-10);
+  height: 100%;
+  overflow: hidden;
+}
+
+.blog-card .card-banner { position: relative; }
+
+.blog-card .card-banner img { transition: var(--transition-1); }
+
+.blog-card:is(:hover, :focus) .card-banner img {
+  transform: scale(1.1);
+}
+
+.blog-card .card-meta {
+  background-color: var(--coquelicot);
+  color: var(--white);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 8px 20px;
+  font-size: var(--fs-6);
+  font-weight: var(--fw-500);
+  text-transform: uppercase;
+}
+
+.blog-card .card-content { padding: 25px; }
+
+.blog-card .card-text { transition: var(--transition-1); }
+
+.blog-card .card-title:is(:hover, :focus) { color: var(--coquelicot); }
+
+.blog-card .card-text {
+  font-size: var(--fs-6);
+  margin-block: 8px 12px;
+}
+
+.blog-card .btn-link { --color: var(--coquelicot); }
+
+.blog-card .btn-link:is(:hover, :focus) { --color: var(--rich-black-fogra-29-1); }
+
 
 
 
